// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`maskBoxRepeat renders 0 1`] = `
Array [
  .c0 {
  -webkit-mask-box-repeat: 0;
  mask-box-repeat: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-box-repeat: 0;
  mask-box-repeat: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-box-repeat: 0;
  mask-box-repeat: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-box-repeat: 0;
  mask-box-repeat: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`maskBoxRepeat renders function 1`] = `
Array [
  .c0 {
  -webkit-mask-box-repeat: hasnot;
  mask-box-repeat: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-box-repeat: has;
  mask-box-repeat: has;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-box-repeat: hasnot;
  mask-box-repeat: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-box-repeat: has;
  mask-box-repeat: has;
}

<div
    className="c0"
  />,
]
`;

exports[`maskBoxRepeat renders invalid theme path 1`] = `
Array [
  .c0 {
  -webkit-mask-box-repeat: invalid.path.1;
  mask-box-repeat: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-box-repeat: invalid.path.1;
  mask-box-repeat: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-box-repeat: invalid.path.1;
  mask-box-repeat: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-box-repeat: invalid.path.1;
  mask-box-repeat: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`maskBoxRepeat renders negative number 1`] = `
Array [
  .c0 {
  -webkit-mask-box-repeat: -54881;
  mask-box-repeat: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-box-repeat: -54881;
  mask-box-repeat: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-box-repeat: -42365;
  mask-box-repeat: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-box-repeat: -42365;
  mask-box-repeat: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`maskBoxRepeat renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  -webkit-mask-box-repeat: July;
  mask-box-repeat: July;
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-mask-box-repeat: August;
    mask-box-repeat: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-mask-box-repeat: September;
    mask-box-repeat: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-mask-box-repeat: November;
    mask-box-repeat: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-mask-box-repeat: August;
    mask-box-repeat: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-box-repeat: July;
  mask-box-repeat: July;
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-mask-box-repeat: August;
    mask-box-repeat: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-mask-box-repeat: September;
    mask-box-repeat: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-mask-box-repeat: November;
    mask-box-repeat: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-mask-box-repeat: August;
    mask-box-repeat: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-box-repeat: January;
  mask-box-repeat: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-mask-box-repeat: December;
    mask-box-repeat: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-mask-box-repeat: April;
    mask-box-repeat: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-mask-box-repeat: May;
    mask-box-repeat: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-mask-box-repeat: June;
    mask-box-repeat: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-box-repeat: January;
  mask-box-repeat: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-mask-box-repeat: December;
    mask-box-repeat: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-mask-box-repeat: April;
    mask-box-repeat: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-mask-box-repeat: May;
    mask-box-repeat: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-mask-box-repeat: June;
    mask-box-repeat: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`maskBoxRepeat renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    -webkit-mask-box-repeat: July;
    mask-box-repeat: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-mask-box-repeat: August;
    mask-box-repeat: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-mask-box-repeat: September;
    mask-box-repeat: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-mask-box-repeat: November;
    mask-box-repeat: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    -webkit-mask-box-repeat: July;
    mask-box-repeat: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-mask-box-repeat: August;
    mask-box-repeat: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-mask-box-repeat: September;
    mask-box-repeat: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-mask-box-repeat: November;
    mask-box-repeat: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-mask-box-repeat: May;
    mask-box-repeat: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-mask-box-repeat: June;
    mask-box-repeat: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-mask-box-repeat: April;
    mask-box-repeat: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-mask-box-repeat: November;
    mask-box-repeat: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-mask-box-repeat: May;
    mask-box-repeat: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-mask-box-repeat: June;
    mask-box-repeat: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-mask-box-repeat: April;
    mask-box-repeat: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-mask-box-repeat: November;
    mask-box-repeat: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`maskBoxRepeat renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  -webkit-mask-box-repeat: July;
  mask-box-repeat: July;
}

@media May {
  .c0 {
    -webkit-mask-box-repeat: August;
    mask-box-repeat: August;
  }
}

@media April {
  .c0 {
    -webkit-mask-box-repeat: September;
    mask-box-repeat: September;
  }
}

@media January {
  .c0 {
    -webkit-mask-box-repeat: November;
    mask-box-repeat: November;
  }
}

@media April {
  .c0 {
    -webkit-mask-box-repeat: August;
    mask-box-repeat: August;
  }
}

@media June {
  .c0 {
    -webkit-mask-box-repeat: November;
    mask-box-repeat: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-box-repeat: July;
  mask-box-repeat: July;
}

@media May {
  .c0 {
    -webkit-mask-box-repeat: August;
    mask-box-repeat: August;
  }
}

@media April {
  .c0 {
    -webkit-mask-box-repeat: September;
    mask-box-repeat: September;
  }
}

@media January {
  .c0 {
    -webkit-mask-box-repeat: November;
    mask-box-repeat: November;
  }
}

@media April {
  .c0 {
    -webkit-mask-box-repeat: August;
    mask-box-repeat: August;
  }
}

@media June {
  .c0 {
    -webkit-mask-box-repeat: November;
    mask-box-repeat: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-box-repeat: April;
  mask-box-repeat: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-mask-box-repeat: November;
    mask-box-repeat: November;
  }
}

@media April {
  .c0 {
    -webkit-mask-box-repeat: January;
    mask-box-repeat: January;
  }
}

@media January {
  .c0 {
    -webkit-mask-box-repeat: December;
    mask-box-repeat: December;
  }
}

@media April {
  .c0 {
    -webkit-mask-box-repeat: April;
    mask-box-repeat: April;
  }
}

@media June {
  .c0 {
    -webkit-mask-box-repeat: May;
    mask-box-repeat: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-box-repeat: April;
  mask-box-repeat: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-mask-box-repeat: November;
    mask-box-repeat: November;
  }
}

@media April {
  .c0 {
    -webkit-mask-box-repeat: January;
    mask-box-repeat: January;
  }
}

@media January {
  .c0 {
    -webkit-mask-box-repeat: December;
    mask-box-repeat: December;
  }
}

@media April {
  .c0 {
    -webkit-mask-box-repeat: April;
    mask-box-repeat: April;
  }
}

@media June {
  .c0 {
    -webkit-mask-box-repeat: May;
    mask-box-repeat: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`maskBoxRepeat renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    -webkit-mask-box-repeat: July;
    mask-box-repeat: July;
  }
}

@media April {
  .c0 {
    -webkit-mask-box-repeat: August;
    mask-box-repeat: August;
  }
}

@media January {
  .c0 {
    -webkit-mask-box-repeat: September;
    mask-box-repeat: September;
  }
}

@media April {
  .c0 {
    -webkit-mask-box-repeat: November;
    mask-box-repeat: November;
  }
}

@media June {
  .c0 {
    -webkit-mask-box-repeat: August;
    mask-box-repeat: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    -webkit-mask-box-repeat: July;
    mask-box-repeat: July;
  }
}

@media April {
  .c0 {
    -webkit-mask-box-repeat: August;
    mask-box-repeat: August;
  }
}

@media January {
  .c0 {
    -webkit-mask-box-repeat: September;
    mask-box-repeat: September;
  }
}

@media April {
  .c0 {
    -webkit-mask-box-repeat: November;
    mask-box-repeat: November;
  }
}

@media June {
  .c0 {
    -webkit-mask-box-repeat: August;
    mask-box-repeat: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-mask-box-repeat: January;
    mask-box-repeat: January;
  }
}

@media April {
  .c0 {
    -webkit-mask-box-repeat: December;
    mask-box-repeat: December;
  }
}

@media January {
  .c0 {
    -webkit-mask-box-repeat: April;
    mask-box-repeat: April;
  }
}

@media April {
  .c0 {
    -webkit-mask-box-repeat: May;
    mask-box-repeat: May;
  }
}

@media June {
  .c0 {
    -webkit-mask-box-repeat: June;
    mask-box-repeat: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-mask-box-repeat: January;
    mask-box-repeat: January;
  }
}

@media April {
  .c0 {
    -webkit-mask-box-repeat: December;
    mask-box-repeat: December;
  }
}

@media January {
  .c0 {
    -webkit-mask-box-repeat: April;
    mask-box-repeat: April;
  }
}

@media April {
  .c0 {
    -webkit-mask-box-repeat: May;
    mask-box-repeat: May;
  }
}

@media June {
  .c0 {
    -webkit-mask-box-repeat: June;
    mask-box-repeat: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`maskBoxRepeat renders postitive number 1`] = `
Array [
  .c0 {
  -webkit-mask-box-repeat: 54881;
  mask-box-repeat: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-box-repeat: 54881;
  mask-box-repeat: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-box-repeat: 42365;
  mask-box-repeat: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-box-repeat: 42365;
  mask-box-repeat: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`maskBoxRepeat renders string 1`] = `
Array [
  .c0 {
  -webkit-mask-box-repeat: July;
  mask-box-repeat: July;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-box-repeat: July;
  mask-box-repeat: July;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-box-repeat: June;
  mask-box-repeat: June;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-box-repeat: June;
  mask-box-repeat: June;
}

<div
    className="c0"
  />,
]
`;

exports[`maskBoxRepeat renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`maskBoxRepeat renders valid theme path 1`] = `
Array [
  .c0 {
  -webkit-mask-box-repeat: DarkSlateBlue;
  mask-box-repeat: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-box-repeat: DarkSlateBlue;
  mask-box-repeat: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-box-repeat: DarkSlateBlue;
  mask-box-repeat: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-box-repeat: DarkSlateBlue;
  mask-box-repeat: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
